--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
-  --default-color: #2b180d; /* Default color used for the majority of the text content across the entire website */
+  --default-color: #030100; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #2b5e96; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #2b5e96; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --contrast-color: #ffffff; /* The contrast color is used for elements when the background color is one of the heading, accent, or default colors. Its purpose is to ensure proper contrast and readability when placed over these more dominant colors */
@@ -18,9 +18,9 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: rgba(255, 255, 255, 0.918);  /* The default color of the main navmenu links */
-  --nav-hover-color: #2b5e96; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #ffffff; /* Applied to main navmenu links when they are hovered over or active */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
-  --nav-dropdown-color: #212529; /* Used for navigation links of the dropdown items in the navigation menu. */
+  --nav-dropdown-color: #2b5e96; /* Used for navigation links of the dropdown items in the navigation menu. */
   --nav-dropdown-hover-color: #fff; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
@@ -28,10 +28,6 @@
 :root {
   scroll-behavior: smooth;
 }
-
-
-
-
 
     /* Estilos adicionales para los logos */
     .clients-container {
@@ -100,9 +96,10 @@ h6 {
 
 #typewriter-title {
   font-family: 'Courier New', Courier, monospace;
+  font-weight:900;
   white-space: nowrap;
   overflow: hidden;
-  border-right: 0.15em solid orange;
+  border-right: 0.15em solid rgb(22, 131, 194);
   animation: blink-caret 0.75s step-end infinite;
 }
 
@@ -123,7 +120,8 @@ h6 {
 /* Estilos para pantallas pequeñas */
 @media (max-width: 480px) {
   #typewriter-title {
-      font-size: 1.5em;
+      font-size: 1.7em;
+      font-weight: bold;
   }
 }
 
