--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1058,15 +1058,17 @@ section,
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 2em;
+  padding: 1em;
   z-index: 1000;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
 
 .cookie-banner p {
   margin: 0;
+  flex: 1 1 60%;
 }
 
 .cookie-banner button {
@@ -1076,12 +1078,28 @@ section,
   padding: 10px 20px;
   cursor: pointer;
   font-size: 1em;
+  flex: 1 1 20%;
+  margin: 0.5em 0;
 }
 
 .cookie-banner button:hover {
   background-color: #ffffff;
   color: #2b5e96;
+}
 
+@media (max-width: 600px) {
+  .cookie-banner {
+    flex-direction: column;
+  }
+
+  .cookie-banner p, .cookie-banner button {
+    flex: 1 1 100%;
+    text-align: center;
+  }
+
+  .cookie-banner button {
+    margin: 0.5em 0 0;
+  }
 }
 
 /*--------------------------------------------------------------
