--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,6 +217,9 @@ h6 {
 }
 
 
+.hide {
+  display: none !important;
+}
 
 /*--------------------------------------------------------------
 # Global Header
