--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1668,7 +1668,7 @@ font-size: 40px;
 # Service Cards Section
 --------------------------------------------------------------*/
 .service-cards .card-item {
-  border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
+  border: 1px solid #26498a6e;
   position: relative;
   border-radius: 0;
 }
@@ -2154,6 +2154,66 @@ font-size: 40px;
 .team .team-member:hover .social {
   opacity: 1;
   bottom: 15px;
+}
+
+/* FAQ Section Styles */
+#faq .accordion-item {
+  border: none;
+  background: #fff !important;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin-bottom: 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#faq .accordion-button {
+  background: #2b5e96;
+  color: #fff !important;
+  font-weight: 500;
+  border-radius: 8px;
+  padding: 15px;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+#faq .accordion-button:not(.collapsed) {
+  background-color: #26498a;
+  color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#faq .accordion-button:after {
+  float: right;
+  margin-left: auto;
+  transition: transform 0.2s ease-in-out;
+  color: #fff !important;
+}
+
+#faq .accordion-button:not(.collapsed):after {
+  transform: rotate(180deg);
+  color: #fff !important;
+
+}
+
+#faq .accordion-body {
+  padding: 20px;
+  background: #f1f7ff;
+}
+
+#faq .accordion-item:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+/* Hover and Active States */
+#faq .accordion-button:hover {
+  background-color: #1d3f67;
+  color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#faq .accordion-item:active {
+  transform: translateY(0);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 /*--------------------------------------------------------------
