--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2204,6 +2204,37 @@ font-size: 40px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
+
+
+
+/* Botón Flotante de WhatsApp */
+.whatsapp-float {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 60px;
+  right: 10px;
+  background-color: #26498a;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 1000;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  background-color: #fff;
+  box-shadow: 4px 4px 6px #999;
+}
+
+.whatsapp-float .whatsapp-icon {
+  margin-top: 15px;
+}
+
+
+
 /* Hover and Active States */
 #faq .accordion-button:hover {
   background-color: #1d3f67;
