--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -240,11 +240,7 @@ h6 {
   line-height: 1;
 }
 
-.header .logo img {
-  height: auto;
-  max-height: 50px;
-  margin-right: 8px;
-}
+
 
 .header .logo h1 {
   font-size: 25px;
@@ -257,6 +253,75 @@ h6 {
   box-shadow: 0px 0 18px color-mix(in srgb, var(--default-color), transparent 85%);
   background-color: #26498a;
   text-decoration: #fff;
+}
+
+
+.logo {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  transition: transform 0.3s;
+}
+
+.logo:hover {
+  transform: scale(1.05);
+}
+
+.sitename {
+  font-size: 2em;
+  margin-left: 10px;
+  position: relative;
+  overflow: visible;
+  white-space: nowrap;
+  color: #fff;
+}
+
+.sitename::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -40%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+  animation: shine 1s infinite;
+}
+
+@keyframes shine {
+  to {
+    right: 10%;
+
+      left: 10%;
+  }
+}
+
+@keyframes textGlow {
+  0%, 100% {
+      text-shadow: 0 0 5px #00b3ff, 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff, 0 0 80px #00b3ff;
+  }
+  50% {
+      text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff, 0 0 80px #00b3ff, 0 0 160px #00b3ff;
+  }
+}
+
+.sitename:hover {
+  animation: textGlow 2s infinite;
+}
+
+.logo-img {
+  width: 50px; /* Ajusta el tamaño según sea necesario */
+  height: auto;
+  filter: brightness(1.5);
+
+  transition: transform 0.3s, filter 0.3s, box-shadow 0.3s;
+
+}
+
+.logo-img:hover {
+  transform: rotate(5deg) scale(1.1);
+  filter: brightness(2) 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff, 0 0 80px #00b3ff, 0 0 160px #00b3ff;
+  shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff, 0 0 80px #00b3ff, 0 0 160px #00b3ff;
 }
 
 /*--------------------------------------------------------------
