--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,6 +85,7 @@ a:hover {
   color: color-mix(in srgb, var(--accent-color), transparent 25%);
   text-decoration: none;
   
+  
 }
 
 h1,
@@ -147,6 +148,7 @@ h6 {
 
 .imagenlogo-img:hover {
   filter: brightness(1.5);
+  
 }
 
 .imagenlogo-img::before,
@@ -283,9 +285,9 @@ h6 {
   position: absolute;
   top: 0;
   left: -20%;
-  width: 90%;
+  width: 95%;
   height: 100%;
-  background: linear-gradient(120deg, transparent, rgba(145, 186, 248, 0.226), transparent);
+  background: linear-gradient(120deg, transparent, rgba(145, 186, 248, 0.171), transparent);
   animation: shine 1s infinite;
 }
 
@@ -378,6 +380,7 @@ h6 {
   .navmenu .active:focus {
     color: var(--nav-hover-color);
     
+    
   }
 
   .navmenu .dropdown ul {
@@ -394,6 +397,8 @@ h6 {
     border-radius: 0;
     z-index: 99;
     box-shadow: 0px 0px 30px color-mix(in srgb, var(--default-color), transparent 85%);
+    animation: tech-glow 1s infinite alternate; /* Añadir el efecto de brillo */
+
   }
 
   .navmenu .dropdown ul li {
@@ -417,6 +422,7 @@ h6 {
   .navmenu .dropdown ul li:hover>a {
     color: var(--nav-dropdown-hover-color);
     background: #26498a;
+    
 
   }
 
@@ -948,6 +954,23 @@ border-radius: 50px;
 transition: 0.5s;
 z-index: 5;
 position: relative;
+animation: tech-glow 1s infinite ; /* Añadir el efecto de brillo */
+}
+
+.hero .btn-get-started:hover {
+color: #26498a ;
+background: #fff;
+font-family: var(--heading-font);
+font-weight: 600;
+font-size: 14px;
+letter-spacing: 1px;
+display: inline-block;
+padding: 12px 30px;
+border-radius: 50px;
+transition: 0.5s;
+z-index: 5;
+position: relative;
+animation: tech-glow 1s infinite alternate; /* Añadir el efecto de brillo */
 }
 
 .hero .btn-get-started
@@ -1490,7 +1513,10 @@ font-size: 13px;
 }
 
 .call-to-action .cta-btn:hover {
-  background: color-mix(in srgb, var(--accent-color) 90%, black 15%);
+  background: #fff;
+  color: #26498a;
+  animation: tech-glow 1s infinite alternate; /* Añadir el efecto de brillo */
+
 }
 
 
@@ -2276,6 +2302,7 @@ font-size: 40px;
 #faq .accordion-item:hover {
   transform: translateY(-2px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  
 }
 
 
@@ -2295,7 +2322,6 @@ font-size: 40px;
   justify-content: center;
   align-items: center;
   font-size: 30px;
-  box-shadow: 2px 2px 3px #999;
   z-index: 1000;
   transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
 }
@@ -2336,9 +2362,11 @@ font-size: 40px;
 
 /* Hover and Active States */
 #faq .accordion-button:hover {
-  background-color: #1d3f67;
-  color: #fff;
+  background-color: #fff;
+  color: #26498a !important;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  animation: tech-glow 1s infinite alternate; /* Añadir el efecto de brillo */
+
 }
 
 #faq .accordion-item:active {
@@ -2752,6 +2780,7 @@ font-size: 40px;
 .blog-comments .reply-form .btn-primary:hover {
   color: var(--contrast-color);
   background-color: color-mix(in srgb, var(--accent-color), transparent 20%);
+  
 }
 
 /*--------------------------------------------------------------
@@ -3120,11 +3149,13 @@ font-size: 40px;
 
 .tech-card:hover::before {
   left: 0; /* Move pseudo element to cover the card on hover */
+  
 }
 
 .tech-card:hover {
   transform: translateY(-10px); /* Move the card up on hover */
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2); /* Add shadow on hover */
+
 }
 
 .tech-card .card-body {
