--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,8 +236,19 @@ h6 {
   background-color: var(--background-color);
   padding: 15px 0;
   transition: all 0.5s;
-  z-index: 997;
+  z-index: 997; 
 }
+  .header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(120deg, transparent, rgba(145, 186, 248, 0.171), transparent);
+    animation: shine 5s infinite;
+  }
+
 
 .header .logo {
   line-height: 1;
@@ -280,16 +291,7 @@ h6 {
   color: #fff;
 }
 
-.sitename::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -20%;
-  width: 95%;
-  height: 100%;
-  background: linear-gradient(120deg, transparent, rgba(145, 186, 248, 0.171), transparent);
-  animation: shine 1s infinite;
-}
+
 
 @keyframes shine {
   to {
