--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1141,7 +1141,6 @@ section,
   color: var(--accent-color);
 }
 
-/* Cookie Banner */
 .cookie-banner {
   position: fixed;
   bottom: 0;
@@ -1152,47 +1151,50 @@ section,
   text-align: center;
   padding: 1em;
   z-index: 1000;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: none; /* Hidden by default */
+  flex-direction: column; /* Align items vertically */
+  justify-content: center;
   align-items: center;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
 }
-
+.cookie-banner.show {
+  transform: translateY(0);
+  display: flex; /* Show the banner when class 'show' is added */
+}
 .cookie-banner p {
-  margin: 0;
-  flex: 1 1 60%;
+  margin: 0 0 1em 0; /* Add some margin below the text */
+  width: 80%;
 }
-
+.cookie-banner .button-container {
+  display: flex;
+  gap: 0.5em;
+  justify-content: center;
+}
 .cookie-banner button {
   background-color: #26498a;
   color: white;
   border: none;
-  padding: 10px 20px;
+  padding: 0.5em 1em; /* Smaller padding */
   cursor: pointer;
-  font-size: 1em;
-  flex: 1 1 20%;
-  margin: 0.5em 0;
+  font-size: 0.875em; /* Smaller font size */
   transition: background-color 0.3s, color 0.3s;
 }
-
 .cookie-banner button:hover {
   background-color: #ffffff;
   color: #26498a;
 }
-
 @media (max-width: 600px) {
   .cookie-banner {
-    flex-direction: column;
+      flex-direction: column;
   }
-
   .cookie-banner p,
   .cookie-banner button {
-    flex: 1 1 100%;
-    text-align: center;
+      width: 100%;
+      text-align: center;
   }
-
   .cookie-banner button {
-    margin: 0.5em 0 0;
+      margin: 0.5em 0;
   }
 }
 
