--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -237,7 +237,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .scrolled .header {
   box-shadow: 0px 0 18px color-mix(in srgb, var(--default-color), transparent 85%);
-  background-color: #26498a;
+  background: linear-gradient(135deg, #0d1b30 25%, #043e94 100%);
   text-decoration: #fff;
 }
 
@@ -270,10 +270,10 @@ h1, h2, h3, h4, h5, h6 {
 
 @keyframes textGlow {
   0%, 100% {
-    text-shadow: 0 0 5px #00b3ff, 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff, 0 0 80px #00b3ff;
+    text-shadow: 0 0 5px #043e94, 0 0 10px #043e94, 0 0 20px #043e94, 0 0 40px #043e94, 0 0 80px #043e94;
   }
   50% {
-    text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff, 0 0 80px #00b3ff, 0 0 160px #00b3ff;
+    text-shadow: 0 0 10px #043e94, 0 0 20px #043e94, 0 0 40px #043e94, 0 0 80px #043e94, 0 0 160px #043e94;
   }
 }
 
@@ -944,7 +944,7 @@ section,
 }
 
 .why-us .slides {
-  background-color: #26498a;
+  background: linear-gradient(135deg, #0d1b30 25%, #043e94 100%);
 }
 
 .why-us h3 {
