--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -646,7 +646,7 @@ h1, h2, h3, h4, h5, h6 {
   inset: 0;
   z-index: 9999;
   overflow: hidden;
-  background-color: var(--background-color);
+  background: linear-gradient(135deg, #0d1b30 25%, #043e94 100%);
   transition: all 0.6s ease-out;
 }
 
@@ -655,7 +655,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid var(--accent-color);
+  border: 6px solid #fff;
   border-top-color: color-mix(in srgb, var(--accent-color), transparent 90%);
   border-radius: 50%;
   width: 60px;
