--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2418,3 +2418,31 @@ section,
   color: #f0f0f0;
   font-size: 1.1rem;
 }
+
+.youtube-videos .swiper-container {
+  width: 100%;
+  padding: 20px 0;
+}
+
+.youtube-videos .swiper-slide {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.youtube-videos .swiper-slide .video-thumbnail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.youtube-videos .swiper-slide iframe {
+  border-radius: 10px;
+}
+
+.youtube-videos .swiper-slide p {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #333;
+}
